<resources>
    <string name="app_name">Projet-S</string>
    <string name="mot_de_passe">Mot De Passe</string>
    <string name="nom_utilisateur">Nom D\'utilisateur</string>
    <string name="connexion">Connexion</string>
    <string name="erreur_onnexion">Mauvaise combinaison de nom utilisateur et de mot de passe</string>
    <string name="présent">Présent</string>
    <string name="absent">Absent</string>
    <string name="coursGroupe">Vos Cours et Groupes</string>
    <string name="voirDétails">Voir Détails</string>
    <string name="scéance">Seance cour:</string>
    <string name="nomCour">Nom du cours: </string>
    <string name="nbÉlèvesInscrit">Nombre d\'élève inscrits: </string>
    <string name="prendrePrésence">Prendre les Présences </string>
    <string name="modifierPrésence">Modifier Présence </string>
    <string name="mdp_oublie">Oublié votre mot de passe?</string>
    <string name="se_connecter">Se connecter</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="mot_de_passe_hint">Mot de passe</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="desc_background_sigin_in">Backgound sigin in</string>
    <string name="vos_cours_et_groupes">Vos cours et groupes</string>
    <string name="liste_des_seances">Liste des séances</string>
    <string name="garderConnexion">Rester connecter?</string>
    <string name="present">Présent</string>
    <string name="image_eleve">image eleve</string>
    <string-array name="choix_heures_absences">
        <item>1 Heure</item>
        <item>2 Heures</item>
        <item>3 Heures</item>
        <item>4 Heures</item>
    </string-array>
</resources>