<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:animateLayoutChanges="?android:attr/windowOverscan"
    android:background="#60000000"
    android:baselineAligned="false"
    android:foregroundTint="#243CD8"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="249dp"
        android:layout_height="match_parent"
        android:layout_weight="5">

        <com.beardedhen.androidbootstrap.BootstrapLabel
            android:id="@+id/tvEtatSeance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="PRÉVUE"
            android:textColor="#000000"
            app:bootstrapBrand="success"
            app:bootstrapHeading="h4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeureSe"
            app:roundedCorners="true" />

        <com.beardedhen.androidbootstrap.BootstrapLabel
            android:id="@+id/jourSeance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="0-12-2099"
            android:textAlignment="center"
            app:bootstrapBrand="warning"
            app:bootstrapHeading="h4"
            app:layout_constraintBottom_toTopOf="@+id/tvHeureSe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:roundedCorners="true" />

        <com.beardedhen.androidbootstrap.BootstrapLabel
            android:id="@+id/tvHeureSe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:text="De 15:00 À 16:00"
            app:bootstrapBrand="regular"
            app:bootstrapHeading="h5"
            app:layout_constraintBottom_toTopOf="@+id/tvEtatSeance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/jourSeance"
            app:roundedCorners="true"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:clipToPadding="true"
        android:orientation="vertical"
        android:paddingTop="0dp">

        <com.beardedhen.androidbootstrap.BootstrapButtonGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:bootstrapBrand="primary"
            app:bootstrapSize="lg"
            app:roundedCorners="true">

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btnModifierPrésence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingTop="5dp"
                android:text="@string/modifierPrésence"
                app:bootstrapBrand="success"
                app:bootstrapSize="lg"
                app:roundedCorners="true"
                tools:ignore="VectorDrawableCompat" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btnVoirDétails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#49544A"
                android:paddingTop="10dp"
                android:text="@string/voirDétails"
                tools:ignore="VectorDrawableCompat" />

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/btnPrendrePrésence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#49544A"
                android:paddingTop="10dp"
                android:text="@string/prendrePrésence"
                app:bootstrapBrand="info"
                app:bootstrapSize="lg"
                app:roundedCorners="true"
                tools:ignore="VectorDrawableCompat" />


            <!--Button
                android:id="@+id/btnVoirDétails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#49544A"
                android:paddingTop="10dp"
                android:text="@string/voirDétails"
                tools:ignore="VectorDrawableCompat" /-->

            <!--Button
                android:id="@+id/btnPrendrePrésence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#49544A"
                android:paddingTop="10dp"
                android:text="@string/prendrePrésence"
                tools:ignore="VectorDrawableCompat" /-->

        </com.beardedhen.androidbootstrap.BootstrapButtonGroup>
    </LinearLayout>

</LinearLayout>